feat: Cinematic splash screen with dark theme and premium typography

--- a/public/app.html
+++ b/public/app.html
@@ -3801,23 +3801,56 @@ html[data-theme='dark'] .info-modal-content .btn:hover {
 }
 
 /* ============================================
-   SPLASH SCREEN - Two-Phase Animation
-   Matches mobile app experience
+   SPLASH SCREEN - Cinematic Brand Introduction
    ============================================ */
+
+/* Load premium display fonts */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Crimson+Text:ital,wght@0,400;0,600;1,400&display=swap');
+
 .splash-screen {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(135deg, #E6FFFA 0%, #D5F5F0 50%, #C8EFE6 100%);
+  background: linear-gradient(180deg, #0F2027 0%, #1A3A40 40%, #2A5560 100%);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: 99999;
   opacity: 1;
-  transition: opacity 0.5s ease-out;
+  transition: opacity 0.8s ease-out;
+  overflow: hidden;
+}
+
+/* Ambient light effect */
+.splash-screen::before {
+  content: '';
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  width: 800px;
+  height: 800px;
+  background: radial-gradient(ellipse, rgba(42, 105, 114, 0.3) 0%, rgba(42, 105, 114, 0.1) 40%, transparent 70%);
+  transform: translate(-50%, -50%);
+  animation: ambient-pulse 6s ease-in-out infinite;
+}
+
+.splash-screen::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 40%;
+  background: linear-gradient(to top, rgba(15, 32, 39, 0.5), transparent);
+  pointer-events: none;
+}
+
+@keyframes ambient-pulse {
+  0%, 100% { opacity: 0.6; transform: translate(-50%, -50%) scale(1); }
+  50% { opacity: 1; transform: translate(-50%, -50%) scale(1.15); }
 }
 
 .splash-screen.fade-out {
@@ -3825,7 +3858,7 @@ html[data-theme='dark'] .info-modal-content .btn:hover {
   pointer-events: none;
 }
 
-/* Phase 1: Welcome text + Pegasus Realm */
+/* Phase 1: Welcome + Pegasus Realm */
 .splash-phase-one {
   position: absolute;
   display: flex;
@@ -3833,59 +3866,76 @@ html[data-theme='dark'] .info-modal-content .btn:hover {
   align-items: center;
   justify-content: center;
   opacity: 0;
-  animation: splash-phase-one 4.5s ease-out forwards;
+  animation: phase-one-sequence 4.5s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+  z-index: 2;
 }
 
 .splash-welcome-title {
-  font-family: var(--title-font);
-  font-size: 2.5rem;
-  font-weight: 700;
-  color: #2A6972;
-  margin: 0 0 1.5rem 0;
+  font-family: 'Playfair Display', Georgia, serif;
+  font-size: 4.5rem;
+  font-weight: 500;
+  color: #FFFFFF;
+  margin: 0 0 2rem 0;
   text-align: center;
-  letter-spacing: 0.5px;
+  letter-spacing: -0.02em;
+  text-shadow: 0 4px 60px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  animation: text-reveal 1.2s ease-out 0.3s forwards;
 }
 
 .splash-welcome-text {
-  font-family: var(--body-font);
-  font-size: 1.25rem;
-  line-height: 1.8;
-  color: #4A5568;
+  font-family: 'Crimson Text', Georgia, serif;
+  font-size: 1.5rem;
+  line-height: 2;
+  color: rgba(255, 255, 255, 0.85);
   text-align: center;
-  margin: 0 0 2.5rem 0;
-  max-width: 400px;
+  margin: 0 0 3rem 0;
+  max-width: 500px;
+  font-weight: 400;
+  font-style: italic;
+  letter-spacing: 0.03em;
+  opacity: 0;
+  animation: text-reveal 1s ease-out 0.8s forwards;
 }
 
 .splash-brought-by {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 1rem;
+  margin-top: 2rem;
+  opacity: 0;
+  animation: text-reveal 1s ease-out 1.4s forwards;
 }
 
 .splash-brought-text {
-  font-family: var(--body-font);
-  font-size: 0.85rem;
-  color: #718096;
+  font-family: 'Crimson Text', Georgia, serif;
+  font-size: 1.1rem;
+  color: rgba(255, 255, 255, 0.5);
   font-style: italic;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.75rem;
+  letter-spacing: 0.05em;
+  text-transform: lowercase;
 }
 
 .splash-pr-name {
-  font-family: var(--title-font);
-  font-size: 1.1rem;
-  font-weight: 600;
-  color: #2A6972;
-  margin-bottom: 0.5rem;
+  font-family: 'Playfair Display', Georgia, serif;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #89C9D4;
+  margin-bottom: 1rem;
+  letter-spacing: 0.02em;
+  text-shadow: 0 2px 20px rgba(137, 201, 212, 0.3);
 }
 
 .splash-pr-logo {
-  width: 70px;
-  height: 70px;
+  width: 90px;
+  height: 90px;
   border-radius: 50%;
+  box-shadow: 0 8px 40px rgba(0, 0, 0, 0.4), 0 0 60px rgba(137, 201, 212, 0.2);
+  border: 2px solid rgba(137, 201, 212, 0.3);
 }
 
-/* Phase 2: Large InkWell logo + tagline */
+/* Phase 2: InkWell Logo Reveal */
 .splash-phase-two {
   position: absolute;
   display: flex;
@@ -3893,43 +3943,87 @@ html[data-theme='dark'] .info-modal-content .btn:hover {
   align-items: center;
   justify-content: center;
   opacity: 0;
-  animation: splash-phase-two 3s ease-out 4s forwards;
+  animation: phase-two-reveal 2.5s cubic-bezier(0.4, 0, 0.2, 1) 4s forwards;
+  z-index: 2;
 }
 
 .splash-large-logo {
-  width: 280px;
+  width: 360px;
   height: auto;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+  filter: drop-shadow(0 20px 60px rgba(0, 0, 0, 0.5)) brightness(1.1);
+  opacity: 0;
+  transform: scale(0.9);
+  animation: logo-reveal 1.5s cubic-bezier(0.4, 0, 0.2, 1) 4s forwards;
 }
 
 .splash-tagline {
-  font-family: var(--body-font);
-  font-size: 1.3rem;
-  color: #4A5568;
+  font-family: 'Playfair Display', Georgia, serif;
+  font-size: 2rem;
   font-style: italic;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.9);
   text-align: center;
+  letter-spacing: 0.04em;
+  text-shadow: 0 2px 30px rgba(0, 0, 0, 0.4);
   opacity: 0;
-  animation: splash-tagline-in 0.6s ease-out 4.8s forwards;
+  animation: tagline-reveal 1.2s ease-out 5s forwards;
 }
 
-/* Animation keyframes */
-@keyframes splash-phase-one {
-  0% { opacity: 0; transform: translateY(20px); }
-  10% { opacity: 1; transform: translateY(0); }
-  75% { opacity: 1; transform: translateY(0); }
-  100% { opacity: 0; transform: translateY(-10px); }
+/* Decorative line under tagline */
+.splash-tagline::after {
+  content: '';
+  display: block;
+  width: 60px;
+  height: 1px;
+  background: linear-gradient(90deg, transparent, rgba(137, 201, 212, 0.6), transparent);
+  margin: 1.5rem auto 0;
 }
 
-@keyframes splash-phase-two {
-  0% { opacity: 0; transform: scale(0.8); }
-  30% { opacity: 1; transform: scale(1.02); }
-  50% { transform: scale(1); }
-  100% { opacity: 1; transform: scale(1); }
+/* Animation Keyframes */
+@keyframes text-reveal {
+  from { 
+    opacity: 0; 
+    transform: translateY(20px); 
+  }
+  to { 
+    opacity: 1; 
+    transform: translateY(0); 
+  }
 }
 
-@keyframes splash-tagline-in {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
+@keyframes phase-one-sequence {
+  0% { opacity: 1; }
+  75% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+@keyframes phase-two-reveal {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+@keyframes logo-reveal {
+  0% { 
+    opacity: 0; 
+    transform: scale(0.9); 
+  }
+  100% { 
+    opacity: 1; 
+    transform: scale(1); 
+  }
+}
+
+@keyframes tagline-reveal {
+  from { 
+    opacity: 0; 
+    transform: translateY(15px); 
+  }
+  to { 
+    opacity: 1; 
+    transform: translateY(0); 
+  }
+}
 }
 
 </style>
