Coach reply colors: coral to purple (#805AD5)

--- a/public/admin.html
+++ b/public/admin.html
@@ -201,7 +201,7 @@
         // Use same Firebase config as auth.js to prevent conflicts
         const firebaseConfig = {
             apiKey: "AIzaSyDivYKnp_SinGjL7iVVwSyQH-RnFHMFDM0",
-            authDomain: "inkwell-alpha.firebaseapp.com",
+            authDomain: "inkwelljournal.io",
             projectId: "inkwell-alpha",
             storageBucket: "inkwell-alpha.appspot.com"
         };
