--- a/public/practitioner-register.html
+++ b/public/practitioner-register.html
@@ -324,7 +324,7 @@
 
         const firebaseConfig = {
             apiKey: "AIzaSyDivYKnp_SinGjL7iVVwSyQH-RnFHMFDM0",
-            authDomain: "inkwell-alpha.firebaseapp.com",
+            authDomain: "inkwelljournal.io",
             projectId: "inkwell-alpha",
             storageBucket: "inkwell-alpha.firebasestorage.app",
             messagingSenderId: "849610731668",
