Add support page for Apple App Store review
- Created support.html with InkWell styling
- About section explaining app functionality
- Crisis resources (988 Lifeline, Crisis Text Line 741741, NAMI, IASP)
- Contact support@inkwelljournal.io
- Privacy policy link to pegasusrealm.com/privacy-policy
- App info section with version 26.039.2
- Added Support link to index.html navigation and footer

Build 72 (v26.039.2) submitted to Apple for review

--- a/public/index.html
+++ b/public/index.html
@@ -2702,6 +2702,7 @@
                 <a href="#sophy" class="nav-link">Meet Sophy</a>
                 <a href="#coaches" class="nav-link">Coaches</a>
                 <a href="#pricing" class="nav-link">Pricing</a>
+                <a href="/support.html" class="nav-link">Support</a>
                 <a href="/practitioner-portal.html" class="nav-link" style="font-weight: 600;">Coach Portal</a>
                 <a href="/app.html" class="nav-cta">Get Started Free</a>
             </div>
@@ -3294,7 +3295,8 @@
                 <div class="footer-section">
                     <h4 class="footer-section-title">Support & Info</h4>
                     <div class="footer-links">
-                        <a href="mailto:support@inkwelljournal.io" class="footer-link">Support</a>
+                        <a href="/support.html" class="footer-link">Support</a>
+                        <a href="mailto:support@inkwelljournal.io" class="footer-link">Contact</a>
                         <a href="https://pegasusrealm.com" class="footer-link">Pegasus Realm</a>
                         <a href="https://adamgrimcoach.com" class="footer-link">Adam Grimm Coaching</a>
                     </div>
